# gtaide-smartod

./: .gitignore  REPORT.md  build_embeddings.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: audit_log.py  chat_edit.py  clarifier.py  content_generator.py  edit_tool_catalog.py  followup.py  intent_parser.py  law_search.py  law_tools.py  llm.py  organ_registry.py  prompts.py  rag.py  rule_engine.py  templates.py  typed_prompts.py  validator.py
backend/app/models/: schemas.py
backend/app/skills/law_search/: CATEGORIES.txt  SKILL.md
backend/app/templates/: 令.j2  便簽.j2  公告.j2  函.j2  書函.j2  簽.j2  開會通知單.j2
backend/app/templates/prompts/: chat_edit_system.j2  clarify_system.j2  clarify_user.j2  content_system.j2  content_user.j2  followup_system.j2  followup_user.j2  generate_system.j2  generate_user.j2  intent_system.j2  intent_user.j2
backend/tests/: test_chat_edit_agent.py  test_extract_citations.py  test_select_phrases.py
design/: DESIGN_GUIDE.md
design/taide/: css_analysis.txt  layout-0916.css  slider.css  taide_main.html
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
gtaide_data/: extract_citations.py
gtaide_data/benchmark/: EVAL_DESIGN_V3.md  EXPERIMENT_LOG.md  benchmark_results.jsonl  benchmark_summary.json  e2e_v3_content_keypoints_100.jsonl  e2e_v3_gold_1000.jsonl  e2e_v3_keypoints_100.jsonl  eval_e2e_v2.py  eval_law_search.py  eval_rag.py  eval_template.py  gold_standard.jsonl  law_search_results.jsonl  law_search_test.jsonl  (+5 more)
(+36 files in other folders)
